# example-template

./: Cargo.toml
src/: benchmarking.rs  config_preludes.rs  lib.rs  mock.rs  pallet_logic.rs  tests.rs  types.rs
src/pallet_logic/: try_state.rs
src/tests/: utils.rs
