[package]
name = "pallet-example_template"
authors = ["Anonymous"]
description = "Frame Pallet"
version = "0.1.0"
license = "Unlicense"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }
frame = { version = "0.3.0", package = "polkadot-sdk-frame", default-features = false, features = ["experimental", "runtime"] }


[dev-dependencies]
pallet-balances = { version = "35.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame/runtime-benchmarks"]
try-runtime = ["frame/try-runtime"]